SERVER-12419 Add support for electionId in replsets and wElectionId in GLE command